--- a/src/components/styles/stories.scss
+++ b/src/components/styles/stories.scss
@@ -10,6 +10,7 @@
     margin: 2em 0 1.5em 0;
     height: 7.4em;
     overflow: hidden;
+    width: 100%;
   }
   
   @media only screen and (max-width: 640px) {
